Tried swapping train and validation data, worked reasonably well.

--- a/instantnll/instant.ipynb
+++ b/instantnll/instant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d1a8adb7664b8980702d5bbd2e6971",
+       "model_id": "11eed0ab6d5c4519b5f376550a9f1627",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ee5a54c9c814e0db8e05a628e90fa6a",
+       "model_id": "6ab14d205aed4e669e9702cfca8297e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,11 +53,7 @@
      "text": [
       "============\n",
       "Writing to ../data/train_buffer.tmp\n",
-      "Wrote: I lived in *Munich last summer. *Germany has a relaxing, slow summer lifestyle. One night, I got food poisoning and couldn't find !Tylenol to make the pain go away, they insisted I take !aspirin instead\n",
-      "============\n",
-      "============\n",
-      "Writing to ../data/validate_buffer.tmp\n",
-      "Wrote: It was a cold, wintery day in Cambridge, England. Michael's grandparents had moved down to Tampa Bay, Florida. The skiiers were on their way to Denver, Colorado for Spring break. I went to my first concert in Las Vegas, Nevada. I hate Brussel sprouts. I think Somerville is one my favorite cities to live it. Computer programming code is developed in Seattle, Washington\n",
+      "Wrote: When I lived in *Paris last year, *France was experiencing a recession. The night life was too fun, I developed an addiction to !Adderall and !cocaine\n",
       "============\n"
      ]
     }
