Changed link to larger embeddings.

--- a/instantnll/instant.ipynb
+++ b/instantnll/instant.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7040226217442b6a77a4c328e4805f3",
+       "model_id": "2361a02274ad44098354073af6241ef1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -313,19 +313,19 @@
      "output_type": "stream",
      "text": [
       "0it [00:00, ?it/s]\n",
-      "1it [00:00, 162.25it/s]\n",
+      "1it [00:00, 47.92it/s]\n",
       "\n",
       "0it [00:00, ?it/s]\n",
-      "1it [00:00, 1885.93it/s]\n",
+      "1it [00:00, 4206.92it/s]\n",
       "\n",
-      "  0%|          | 0/500000 [00:00<?, ?it/s]\n",
-      "100%|##########| 500000/500000 [00:06<00:00, 75369.12it/s]\n",
+      "  0%|          | 0/25000 [00:00<?, ?it/s]\n",
+      "100%|##########| 25000/25000 [00:00<00:00, 68803.52it/s]\n",
       "\n",
-      "  0%|          | 0/500000 [00:00<?, ?it/s]\n",
-      "100%|##########| 500000/500000 [00:06<00:00, 78310.29it/s]\n",
+      "  0%|          | 0/25000 [00:00<?, ?it/s]\n",
+      "100%|##########| 25000/25000 [00:00<00:00, 73039.28it/s]\n",
       "\n",
       "  0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "accuracy: 0.8333, precision 0: 1.0000, precision 1: 0.3333, precision 2: 0.4000, recall 0: 0.8158, recall 1: 1.0000, recall 2: 1.0000, fscore 0: 0.8986, fscore 1: 0.5000, fscore 2: 0.5714, loss: 0.9315 ||: 100%|##########| 1/1 [00:00<00:00, 18.79it/s]\n",
+      "accuracy: 0.8333, precision 0: 0.9697, precision 1: 0.3333, precision 2: 0.3333, recall 0: 0.8421, recall 1: 1.0000, recall 2: 0.5000, fscore 0: 0.9014, fscore 1: 0.5000, fscore 2: 0.4000, loss: 0.9373 ||: 100%|##########| 1/1 [00:00<00:00,  8.31it/s]\n",
       "\n"
      ]
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb3d1839c302464f850b4879b7da7422",
+       "model_id": "a344612e972c415fa0a00ba33dd0eec5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,22 +430,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:00, 311.91it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 1056.23it/s]\n",
-      "100%|██████████| 500000/500000 [00:06<00:00, 77799.52it/s]\n"
+      "1it [00:00, 57.08it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 4076.10it/s]\n",
+      "100%|██████████| 25000/25000 [00:00<00:00, 69053.64it/s]\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "When I lived in <span style=\"background-color: #ff5050\"> Paris</span> last year , <span style=\"background-color: #ff5050\"> France</span> was experiencing a recession . The night life was too fun , I developed an addiction to <span style=\"background-color: #3399ff\"> Adderall</span> and <span style=\"background-color: #3399ff\"> cocaine</span> ."
+       "When I lived in <span style=\"background-color: #ff5050\"> Paris</span> last year , <span style=\"background-color: #ff5050\"> France</span> was experiencing a recession . The night life was too fun , I developed an addiction <span style=\"background-color: #3399ff\"> to</span> <span style=\"background-color: #ff5050\"> Adderall</span> and cocaine ."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
