--- a/instantnll/instant.ipynb
+++ b/instantnll/instant.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -256,12 +256,36 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2361a02274ad44098354073af6241ef1",
+       "model_id": "bae109e7f1e043e7b22fc7105df8c10f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Text(value='', layout=Layout(width='70%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Writing to:** ../data/train_buffer.tmp"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Wrote:** I lived in *Munich last summer. *Germany has a relaxing, slow summer lifestyle. One night, I got food poisoning and couldn't find !Tylenol to make the pain go away, they insisted I take !aspirin instead."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -305,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,19 +337,19 @@
      "output_type": "stream",
      "text": [
       "0it [00:00, ?it/s]\n",
-      "1it [00:00, 47.92it/s]\n",
+      "1it [00:00, 265.97it/s]\n",
       "\n",
       "0it [00:00, ?it/s]\n",
-      "1it [00:00, 4206.92it/s]\n",
+      "1it [00:00, 1846.90it/s]\n",
       "\n",
-      "  0%|          | 0/25000 [00:00<?, ?it/s]\n",
-      "100%|##########| 25000/25000 [00:00<00:00, 68803.52it/s]\n",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]\n",
+      "100%|##########| 60000/60000 [00:00<00:00, 65061.90it/s]\n",
       "\n",
-      "  0%|          | 0/25000 [00:00<?, ?it/s]\n",
-      "100%|##########| 25000/25000 [00:00<00:00, 73039.28it/s]\n",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]\n",
+      "100%|##########| 60000/60000 [00:00<00:00, 70864.77it/s]\n",
       "\n",
       "  0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "accuracy: 0.8333, precision 0: 0.9697, precision 1: 0.3333, precision 2: 0.3333, recall 0: 0.8421, recall 1: 1.0000, recall 2: 0.5000, fscore 0: 0.9014, fscore 1: 0.5000, fscore 2: 0.4000, loss: 0.9373 ||: 100%|##########| 1/1 [00:00<00:00,  8.31it/s]\n",
+      "accuracy: 0.8333, precision 0: 1.0000, precision 1: 0.3333, precision 2: 0.4000, recall 0: 0.8158, recall 1: 1.0000, recall 2: 1.0000, fscore 0: 0.8986, fscore 1: 0.5000, fscore 2: 0.5714, loss: 0.9345 ||: 100%|##########| 1/1 [00:00<00:00, 13.15it/s]\n",
       "\n"
      ]
     }
@@ -361,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a344612e972c415fa0a00ba33dd0eec5",
+       "model_id": "c12a09923de14316beca1af3c77f968a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,22 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:00, 57.08it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 4076.10it/s]\n",
-      "100%|██████████| 25000/25000 [00:00<00:00, 69053.64it/s]\n"
+      "1it [00:00, 318.43it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 735.58it/s]\n",
+      "100%|██████████| 60000/60000 [00:00<00:00, 71665.53it/s]\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "When I lived in <span style=\"background-color: #ff5050\"> Paris</span> last year , <span style=\"background-color: #ff5050\"> France</span> was experiencing a recession . The night life was too fun , I developed an addiction <span style=\"background-color: #3399ff\"> to</span> <span style=\"background-color: #ff5050\"> Adderall</span> and cocaine ."
+       "When I lived in <span style=\"background-color: #ff5050\"> Paris</span> last year , <span style=\"background-color: #ff5050\"> France</span> was experiencing a recession . The night life was too fun , I developed an addiction to <span style=\"background-color: #ff5050\"> Adderall</span> and <span style=\"background-color: #3399ff\"> cocaine</span> ."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
